# opengl-jpeg-encoder

./: .gitignore  CMakeLists.txt  README.md  ojenc.pc.in
CMake/: FindDRM.cmake  FindGBM.cmake
include/: ojenc.h
src/: ojenc.c
